# chord

./: .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  build_test_image.sh  docker-compose.yaml  go.mod  go.sum  hello_client.cpp  hello_server.cpp  main.go
.github/workflows/: acr.yml  go.yml
chord/: chord.go  chord_metrics.go  chord_test.go  directory.go  keystore.go  node.go  node_metrics.go  node_test.go  peers.go  rpc_node.go  rpc_server.go  server.go  successorlist.go  successorlist_test.go  utils.go  utils_test.go
client/: main.go
dht/: dht_client.go  dht_server.go  keystore.go  keystore_metrics.go  keystore_test.go  util.go
k8s/: lead_deployment.yaml  peer_deployment.yaml  setup_pull_secret.sh
lead/: main.go
peer/: main.go
peer_four/: main.go
peer_one/: main.go
peer_three/: main.go
peer_two/: main.go
protos/: chord.proto  dht.proto  hello.proto  keyvalue.pb.go  keyvalue.proto  keyvalue_grpc.pb.go
protos/chord/: chord.proto
protos/dht/: dht.proto
python_library/: .gitignore  Dockerfile  chord_python  chord_test  client.py  experiment.py  fetch_key_distribution.py  fetch_nodes.py  generate_protos.sh  get_key.py  key_distribution.ipynb  key_lib.py  path_length.ipynb  requirements.txt  set_key.py  walk.py
python_library/results/: .gitignore
python_library/results/key_distribution_normalised/: dht_key_totals_100.npy  dht_key_totals_1000.npy  dht_key_totals_500.npy
python_library/results/key_distribution_test/: dht_key_totals_10.npy  dht_key_totals_100.npy  dht_key_totals_1000.npy  dht_key_totals_15.npy  dht_key_totals_150.npy  dht_key_totals_200.npy  dht_key_totals_25.npy  (+10 more)
scripts/: azure-acr-rbac.sh
server/: server.go
test_bench/k8s/: experiment_deployment.yaml  lead_deployment.yaml  peer_deployment.yaml  pod_monitor.yaml
test_bench/prometheus/: README.md  prometheus.yml
test_bench/scripts/: azure-acr-rbac.sh  port_forward_grafana.sh  setup_kube_prometheus.sh
(+19 files in other folders)
